--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <main> <img src='img/poster.jpg' alt='Tryin to be Funny' width="1024" height="768">
-
+  <h1>forkin' and clonin' and pull requestin'</h1>
   <h2>I'm so excited to play with jQuery...</h2>
   <p>This is a standard paragraph in the HTML document. This is a little more text to give this page some well needed structure. See...I could do this all day just filling web pages with nothing really to say.</p>
   <p>Make sure you check out: <a href="http://codepen.io/Hornebom/pen/ranmi">codepen.io</a>. It is an awesome place to check out what people have made with jQuery. Hopefully soon, you'll get to add your own pens to show off.</p>
